--- a/CalculoIMC.html
+++ b/CalculoIMC.html
@@ -12,7 +12,7 @@
         Massa (Kg):
         <input type="number" min="10" max="70" name="KG"/></br></br>
         Altura (M):
-        <input type="number" min="0,50" max="4,00" name="AM"/></br></br>
+        <input type="number" name="AM" step=".01"/></br></br>
         <input type="submit" name="enviar"/>
     </form>
 </div>
