--- a/CalculoIMC.html
+++ b/CalculoIMC.html
@@ -10,9 +10,9 @@
     <h3>  Calculo de IMC  </h3>
     <form action="CalculoIMC.php">
         Massa (Kg):
-        <input type="number" min="10" max="70" name="KG"/></br></br>
+        <input type="number" min="10" max="400"  name="KG" step=".01"/></br></br>
         Altura (M):
-        <input type="number" name="AM" step=".01"/></br></br>
+        <input type="number" min="0,5" max="4" name="AM" step=".01"/></br></br>
         <input type="submit" name="enviar"/>
     </form>
 </div>
